AW-5714 Fix z-index for tooltip and deputy detail-page

--- a/src/scss/_deputy.scss
+++ b/src/scss/_deputy.scss
@@ -117,7 +117,6 @@
   }
   header {
     position: relative;
-    z-index: 500;
     .dropdown--default,
     .select2 {
       margin-bottom: $space-large;
