--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -73,11 +73,14 @@
     z-index: 99;
   }
 }
-.dropdown--open .dropdown__list {
-  display: block;
-  @include breakpoint($breakpoint-m-min) {
-    opacity: 1;
-    pointer-events: auto;
+.dropdown--open {
+  z-index: 9999;
+  .dropdown__list {
+    display: block;
+    @include breakpoint($breakpoint-m-min) {
+      opacity: 1;
+      pointer-events: auto;
+    }
   }
 }
 .dropdown__list__item__link {
@@ -92,7 +95,6 @@
 .dropdown--default {
   border: 1px solid $gray;
   position: relative;
-  z-index: 9;
 
   > span {
     position: relative;
