--- a/src/scss/_tooltip.scss
+++ b/src/scss/_tooltip.scss
@@ -4,7 +4,7 @@
 
 [data-tooltip-content] {
   position: relative;
-  z-index: 499;
+  z-index: 999;
   &.icon {
     color: $gray;
   }
